manifests/nginxgatewayfabric/postinstall/base/resources/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gatewayapi
  # labels:
    # istio.io/dataplane-mode: ambient
    # istio.io/use-waypoint: waypoint
