manifests/nginxgatewayfabric/postinstall/base/resources/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: clusteringress-frontdoor-routing-redirecthttptohttps
  namespace: gatewayapi
spec:
  parentRefs:
  - name: clusteringress-frontdoor
    sectionName: http
    namespace: gatewayapi
    group: gateway.networking.k8s.io
    kind: Gateway
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301 # permanent redirect
    matches:
    - path:
        type: PathPrefix
        value: /
